syntax="proto3";

option go_package="./GrpcBlogService";

enum PrivacyMode {
    PrivacyMode_PUBLIC=0;
    PrivacyMode_FRIEND=1;
    PrivacyMode_PRIVATE=2;
}

message CreateBlogRequest {
    string Title=1;
    PrivacyMode Privacy=2;
    int32 Author=3;
    string Content=4;
}

message CreateBlogResponse {

}

message MultiGetBlogsRequest {
    repeated int32 BlogIds=1;
}

message Blog {
    string Title=1;
    PrivacyMode Privacy=2;
    int32 Author=3;
    string Content=4;
    int64 CreatedTime=5;
    int64 UpdatedTime=6;
}

message MultiGetBlogsResponse {
    repeated Blog Blogs=1;
}

message GetBlogsOfUserRequest {
    int32 UserId=1;
    int32 Offset=2;
    int32 Limit=3;
}

message GetBlogsOfUserResponse {
    repeated Blog Blogs=1;
}

message GetUserBlogsWithRelationshipsRequest {
    int32 UserId=1;
    int32 Offset=2;
    int32 Limit=3;
    repeated int32 Relationship=4;
}

service BlogService {
    rpc CreatedBlog(CreateBlogRequest) returns (CreateBlogResponse);
    rpc MultiGetBlogs(MultiGetBlogsRequest) returns (MultiGetBlogsResponse);
    rpc GetBlogsOfUser(GetBlogsOfUserRequest) returns (GetBlogsOfUserResponse);
    rpc GetUserBlogsWithRelationships(GetUserBlogsWithRelationshipsRequest) returns (GetBlogsOfUserResponse);
}